--- a/mastercard-project/app/components/setup/complete/setup.complete.html
+++ b/mastercard-project/app/components/setup/complete/setup.complete.html
@@ -7,7 +7,13 @@
         </button>
     </ion-nav-buttons>
 
-    <ion-content class="mt-30 text-center">
+    <ion-content class=" text-center">
+        <div class="header-image text-center">
+            <img src="images/setup/complete/header-complete.png" height="80"/>
+
+            <h2>Completed</h2>
+        </div>
+
         <p><strong>Coles North Sydney</strong></p>
 
         <p>for</p>
