--- a/mastercard-project/app/components/meal/summary/meal.summary.html
+++ b/mastercard-project/app/components/meal/summary/meal.summary.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Summary">
+<ion-view view-title="Meal Summary">
     <ion-nav-buttons side="right">
         <button
                 class="button button-balanced ion-checkmark-round"
@@ -7,7 +7,7 @@
         </button>
     </ion-nav-buttons>
 
-    <ion-content class="mt-30 text-center page-meal-summary">
+    <ion-content class="page-meal-summary">
         <div class="list" ng-repeat="summary in mealSummary">
 
             <div class="item item-divider">
