--- a/mastercard-project/app/components/meal/summary/meal.summary.html
+++ b/mastercard-project/app/components/meal/summary/meal.summary.html
@@ -1,11 +1,14 @@
-<ion-view view-title="Meal Summary">
-    <ion-nav-buttons side="right">
-        <button
-                class="button button-balanced ion-checkmark-round"
-                ng-click="proceed()">
-            <!--ng-if="isValid"-->
-        </button>
-    </ion-nav-buttons>
+<ion-view view-title="Summary">
+    <ion-header-bar align-title="left" class="bar-light">
+        <button class="button button-icon icon ion-chevron-left"></button>
+        <h1 class="title">Summary</h1>
+        <div class="buttons">
+            <button
+                    class="button button-balanced ion-checkmark-round"
+                    ng-click="proceed()">
+            </button>
+        </div>
+    </ion-header-bar>
 
     <ion-content class="page-meal-summary">
         <div class="list" ng-repeat="summary in mealSummary">
