--- a/mastercard-project/app/components/setup/complete/setup.complete.html
+++ b/mastercard-project/app/components/setup/complete/setup.complete.html
@@ -1,14 +1,17 @@
 <ion-view view-title="Summary">
-    <ion-nav-buttons side="right">
-        <button
-                class="button button-balanced ion-checkmark-round"
-                ng-click="proceed()">
-            <!--ng-if="isValid"-->
-        </button>
-    </ion-nav-buttons>
+    <ion-header-bar align-title="left" class="bar-assertive">
+        <button class="button button-icon icon ion-chevron-left"></button>
+        <h1 class="title">Summary</h1>
+        <div class="buttons">
+            <button
+                    class="button button-balanced ion-checkmark-round"
+                    ng-click="proceed()">
+            </button>
+        </div>
+    </ion-header-bar>
 
     <ion-content class=" text-center">
-        <div class="header-image text-center">
+        <div class="header-image bar-assertive text-center">
             <img src="images/setup/complete/header-complete.png" height="80"/>
 
             <h2>Completed</h2>
